--- a/projects.html
+++ b/projects.html
@@ -41,39 +41,18 @@
     </div>
 
     <div class="visit-card">
-        <div class="profile">
-            <img src="profile.jpg" class="profile-pic">
-        </div>
         <div class="media-body">
-            <div class="personal-text">
-                <h3>Veronika Kitsul</h3>
+            <div class="project-text">
+                <h4>Solving the Knapsack problem with Variational Quantum Eigensolver Algorithm</h4>
                 <p>
-                    Welcome! I am a senior at <a href="https://www.stmarksschool.org/"><mark>St. Mark's School.</mark></a> I am interested in Physics, Computer Science, Math, and Sustainability. I am an avid researcher and love exploring everything new
-                    from Space Race political cartoons to quantum computing.
+                    The knapsack problem is a problem in combinatorial optimization: Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the
+                    total value is as large as possible. It derives its name from the problem faced by someone who is constrained by a fixed-size knapsack and must fill it with the most valuable items. The problem often arises in resource allocation where
+                    the decision makers have to choose from a set of non-divisible projects or tasks under a fixed budget or time constraint, respectively.
                 </p>
-                <p>
-                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
-                </p>
-                <p>
-                    Feel free to browse through my website to learn more about me!
-                </p>
+            </div>
 
-                <div class="email">
-                    <h4>
-                        Personal email: veronika.kitsul@gmail.com
-                    </h4>
-                </div>
-                <div class="personal-social">
-                    <span>
-                            <a href="https://www.facebook.com/veronika.kitsul"><img src="f.png"></a>
-                            </span>
-                    <span>
-                            <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lin.png"></a>
-                        </span>
-                    <span>
-                            <a href="https://github.com/Veronika-Kitsul"><img src="git.png"></a>
-                        </span>
-                </div>
+            <div class="project-picture">
+                <embed src="Veronika_Kitsul Knapsack VQE.pdf" type="application/pdf" width="650px" height="500px">
             </div>
         </div>
     </div>
