--- a/cv.html
+++ b/cv.html
@@ -36,6 +36,11 @@
                         <span>PROJECTS</span>
                     </a>
                 </li>
+                <li>
+                    <a href="stem.html">
+                        <span>STEM Research Fellowship</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
