--- a/projects.html
+++ b/projects.html
@@ -36,27 +36,73 @@
                         <span>PROJECTS</span>
                     </a>
                 </li>
+                <li>
+                    <a href="stem.html">
+                        <span>STEM Research Fellowship</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
 
     <div class="visit-card">
         <div class="media-body">
-            <div class="project-text">
-                <h4>Solving the Knapsack problem with Variational Quantum Eigensolver Algorithm</h4>
-                <p>
-                    The knapsack problem is a problem in combinatorial optimization: Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the
-                    total value is as large as possible. It derives its name from the problem faced by someone who is constrained by a fixed-size knapsack and must fill it with the most valuable items. The problem often arises in resource allocation where
-                    the decision makers have to choose from a set of non-divisible projects or tasks under a fixed budget or time constraint, respectively.
-                </p>
-            </div>
+            <div class="media-body-container">
+                <div class="project-text">
+                    <h4>SOLVING THE KNAPSACK PROBLEM WITH VARIATIONAL QUANTUM EIGENSOLVER ALGORITHM</h4>
+                    <p>
+                        The Knapsack Problem is a problem in combinatorial optimization: Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the
+                        total value is as large as possible. It derives its name from the problem faced by someone who is constrained by a fixed-size knapsack and must fill it with the most valuable items. The problem often arises in resource allocation
+                        where the decision makers have to choose from a set of non-divisible projects or tasks under a fixed budget or time constraint, respectively. VQE is a hybrid algorithm that allows to combine classical computer and quantum one to
+                        get better outputs than each of them is able to provide separately. The project is implemented through the IBM Quantum Experience using Qiskit Python library for quantum computing.
+                    </p>
+                </div>
 
-            <div class="project-picture">
-                <embed src="Veronika_Kitsul Knapsack VQE.pdf" type="application/pdf" width="650px" height="500px">
+                <div class="project-picture">
+                    <embed src="Knapsack VQE.pdf" type="application/pdf" width="650px" height="500px">
+                </div>
             </div>
         </div>
     </div>
 
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text">
+                    <h4>GROVER'S SEARCH ALGORITHM FOR TWO QUBITS</h4>
+                    <p>
+                        Grover’s Search Algorithm is a quantum algorithm that searches through unordered data. The algorithm, however, like all quantum, does not output the location with 100% precision but gives a very high probability of finding the element in a certain position.
+                        It’s proven that Grover’s Search is √X faster than classical computer, where X is the number of elements in the database. The project is implemented through the IBM Quantum Experience using Qiskit Python library for quantum computing.
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="650px" height="500px">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text">
+                    <h4>BOUNCY GAME WITH JAVA GRAPHICS</h4>
+                    <p>
+                        This is a simple Bouncy Game on Java. At the start of the game you are given a ball on a petal and several blocks up above that you have to break through. The ball will automatically start bouncing back and forth, and once it hits any of the blocks --
+                        they pop. On the way back, however, it's your job to catch the ball with the petal. Once the ball touches the ground -- game is over. You win if you hit all the blocks and don't let the ball touch the ground. To run the game, download
+                        this repository from Github, and run "Bouncy.java" file to begin. All the other files are supplementary classes used to implement the game. Changing any of the files may result in a broken game. The game is implemented using some
+                        Java Graphics, classes, and inheritance.
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <img src="Bouncy.png" id="bouncy" height="550px">
+                    <embed src="" type="application/pdf" width="650px" height="500px">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
