--- a/stem.html
+++ b/stem.html
@@ -19,7 +19,69 @@
 </head>
 
 <body>
+    <div class="left-side-menu-fixed">
+        <a href="index.html" class="logo-menu-fixed" id="active">
+            <h1>VERONIKA</h1>
+            <p>KITSUL</p>
+        </a>
+        <div class="ul-list-menu-fixed">
+            <ul>
+                <li>
+                    <a href="cv.html">
+                        <span>CV</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="projects.html">
+                        <span>PROJECTS</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="stem.html" id="stem">
+                        <span>STEM Research Fellowship</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
+    <div class="visit-card">
+        <div class="profile">
+            <img src="profile.jpg" class="profile-pic">
+        </div>
+        <div class="media-body">
+            <div class="personal-text">
+                <h3>Veronika Kitsul</h3>
+                <p>
+                    Welcome! I am a senior at <a href="https://www.stmarksschool.org/"><mark>St. Mark's School.</mark></a> I am interested in Physics, Computer Science, Math, and Sustainability. I am an avid researcher and love exploring everything new
+                    from Space Race political cartoons to quantum computing.
+                </p>
+                <p>
+                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
+                </p>
+                <p>
+                    Feel free to browse through my website to learn more about me!
+                </p>
+
+                <div class="email">
+                    <h4>
+                        Personal email: veronika.kitsul@gmail.com
+                    </h4>
+                </div>
+                <div class="personal-social">
+                    <span>
+                        <a href="https://www.facebook.com/veronika.kitsul"><img src="f.png"></a>
+                        </span>
+                    <span>
+                        <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lin.png"></a>
+                    </span>
+                    <span>
+                        <a href="https://github.com/Veronika-Kitsul"><img src="git.png"></a>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
