--- a/stem.html
+++ b/stem.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="left-side-menu-fixed">
-        <a href="index.html" class="logo-menu-fixed" id="active">
+        <a href="index.html" class="logo-menu-fixed">
             <h1>VERONIKA</h1>
             <p>KITSUL</p>
         </a>
@@ -46,39 +46,44 @@
     </div>
 
     <div class="visit-card">
-        <div class="profile">
-            <img src="profile.jpg" class="profile-pic">
-        </div>
         <div class="media-body">
-            <div class="personal-text">
-                <h3>Veronika Kitsul</h3>
-                <p>
-                    Welcome! I am a senior at <a href="https://www.stmarksschool.org/"><mark>St. Mark's School.</mark></a> I am interested in Physics, Computer Science, Math, and Sustainability. I am an avid researcher and love exploring everything new
-                    from Space Race political cartoons to quantum computing.
+            <div class="stem-text">
+                <h4>ABOUT</h4>
+                <p>STEM Research Fellowship is a 10-months long program at St. Mark's School that one applies to with an aim to get help in conducting an independent STEM Research. I am doing the program in 2021-2022 school year. My project will be something
+                    in the realm in Cryptography, the science of communication security.
                 </p>
-                <p>
-                    Non-academically, I am an animal welfare activist, and lead a team of volunteers, with whom we develop the first of its kind in Eastern Europe online tool to define if companies test their products on animals called <a href="https://t.me/ESMURateBot"><mark>TurBOTa</mark></a>                    (from Ukrainian "care"). Since 2019, I am <a href="https://www.ugs.foundation/"><mark>Ukraine Global Scholars</mark></a> finalist, mentor, and volunteer. I am also learning to play guitar and run cross-country in my free time.
-                </p>
-                <p>
-                    Feel free to browse through my website to learn more about me!
-                </p>
+                <br>
 
-                <div class="email">
-                    <h4>
-                        Personal email: veronika.kitsul@gmail.com
-                    </h4>
-                </div>
-                <div class="personal-social">
-                    <span>
-                        <a href="https://www.facebook.com/veronika.kitsul"><img src="f.png"></a>
-                        </span>
-                    <span>
-                        <a href="https://www.linkedin.com/in/veronika-kitsul-6606751aa/"><img src="lin.png"></a>
-                    </span>
-                    <span>
-                        <a href="https://github.com/Veronika-Kitsul"><img src="git.png"></a>
-                    </span>
-                </div>
+                <h4>INITIAL PLAN</h4>
+                <p>Chaos Theory was discoverec by Lorenz in 1960s when he studied weather patterns. Lorenz noticed that starting with slightly different initial conditions totally changed how the patterns developed and one could not predict in what direction
+                    would it move. That is why synoptics are not able to predict weather with a 100% precision — it is chaotical. Another famous example of the Chaos Theory is the Butterfly Effect — butterfly's fly in Brasil can cause a rainstorm in China,
+                    though this is a bit exagerrated, it gives a good understanding of the concept of Chaos Theory. Because Chaos is so unpredictable, there were thoughts of using it in Cryptography to obtain truly random encryption of messages that are
+                    believed to be 100% unhackable.</p>
+                <br>
+
+                <h4>SUMMER WORK</h4>
+                <p>Every STEM Fellow does summer work before the fall they start their project. My summer work consisted of several things:
+                </p>
+                <ul>
+                    <li>Research Papers
+                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                            <li style="margin-left:2em"></li>
+                            <li style="margin-left:2em; padding-bottom: 0;">Another Sub</li>
+                        </ol>
+                    </li>
+
+                    <li>Linear Algebra class</li>
+                    <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                        <li style="margin-left:2em">Papers on Chaos Theory in Cryptography that I read required decent understanding of very high-level math and physics, especially electronics. Therefore, I took on Linear Algebra course at Stanford Pre-Collegiate Studies to be more
+                            comfortable with the math notation and concepts mentioned in the research papers. </li>
+                    </ol>
+
+                    <li>Quantum Computing online-school</li>
+                    <li>Data Science and Machine Learning bootcamp</li>
+
+                    <br>
+                    <img src="summer.png" width="700px">
+                </ul>
             </div>
         </div>
     </div>
