--- a/stem.html
+++ b/stem.html
@@ -78,12 +78,24 @@
                             comfortable with the math notation and concepts mentioned in the research papers. </li>
                     </ol>
 
-                    <li>Quantum Computing online-school</li>
+                    <li>Quantum Computing Online-School
+                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                            <li style="margin-left:2em">I took a Quantum Computing course to introduce myself to the field. We talked about the very basics of the sphere, how Quantum is different from Classical, and also touched upon Cryptography. I learned about Grover's Algorithm,
+                                Quantum Key Distribution, and also some of the hybrid algorithms (ones that use both quantum and classical computers in their work).</li>
+                        </ol>
+                    </li>
+
                     <li>Data Science and Machine Learning bootcamp</li>
 
                     <br>
                     <img src="summer.png" width="700px">
                 </ul>
+
+                <h4>WEEK 1(2?)</h4>
+                <p>
+
+                </p>
+                <br>
             </div>
         </div>
     </div>
