--- a/stem.html
+++ b/stem.html
@@ -47,6 +47,31 @@
 
     <div class="visit-card">
         <div class="media-body">
+            <div class="ul-list-menu-fixed">
+                <ul>
+                    <li>
+                        <a href="cv.html">
+                            <span>ABOUNT</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="projects.html">
+                            <span>INITIAL PLAN</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="stem.html" id="stem">
+                            <span>SUMMER WORK</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="stem.html" id="stem">
+                            <span>SEPTEMBER RESEARCH</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
             <div class="stem-text">
                 <h4>ABOUT</h4>
                 <p>STEM Research Fellowship is a 10-months long program at St. Mark's School that one applies to with an aim to get help in conducting an independent STEM Research. I am doing the program in 2021-2022 school year. My project will be something
@@ -91,7 +116,8 @@
                     <img src="summer.png" width="700px">
                 </ul>
 
-                <h4>WEEK 1(2?)</h4>
+                <br>
+                <h4>SEPTEMBER RESEARCH</h4>
                 <p>
 
                 </p>
