--- a/stem.html
+++ b/stem.html
@@ -50,22 +50,22 @@
             <div class="ul-list-menu-fixed">
                 <ul>
                     <li>
-                        <a href="cv.html">
+                        <a href="#about">
                             <span>ABOUNT</span>
                         </a>
                     </li>
                     <li>
-                        <a href="projects.html">
+                        <a href="#initial">
                             <span>INITIAL PLAN</span>
                         </a>
                     </li>
                     <li>
-                        <a href="stem.html" id="stem">
+                        <a href="#summer">
                             <span>SUMMER WORK</span>
                         </a>
                     </li>
                     <li>
-                        <a href="stem.html" id="stem">
+                        <a href="#september">
                             <span>SEPTEMBER RESEARCH</span>
                         </a>
                     </li>
@@ -73,20 +73,20 @@
             </div>
 
             <div class="stem-text">
-                <h4>ABOUT</h4>
+                <h4 id="about">ABOUT</h4>
                 <p>STEM Research Fellowship is a 10-months long program at St. Mark's School that one applies to with an aim to get help in conducting an independent STEM Research. I am doing the program in 2021-2022 school year. My project will be something
                     in the realm in Cryptography, the science of communication security.
                 </p>
                 <br>
 
-                <h4>INITIAL PLAN</h4>
+                <h4 id="initial">INITIAL PLAN</h4>
                 <p>Chaos Theory was discoverec by Lorenz in 1960s when he studied weather patterns. Lorenz noticed that starting with slightly different initial conditions totally changed how the patterns developed and one could not predict in what direction
                     would it move. That is why synoptics are not able to predict weather with a 100% precision — it is chaotical. Another famous example of the Chaos Theory is the Butterfly Effect — butterfly's fly in Brasil can cause a rainstorm in China,
                     though this is a bit exagerrated, it gives a good understanding of the concept of Chaos Theory. Because Chaos is so unpredictable, there were thoughts of using it in Cryptography to obtain truly random encryption of messages that are
                     believed to be 100% unhackable.</p>
                 <br>
 
-                <h4>SUMMER WORK</h4>
+                <h4 id="summer">SUMMER WORK</h4>
                 <p>Every STEM Fellow does summer work before the fall they start their project. My summer work consisted of several things:
                 </p>
                 <ul>
@@ -117,7 +117,7 @@
                 </ul>
 
                 <br>
-                <h4>SEPTEMBER RESEARCH</h4>
+                <h4 id="september">SEPTEMBER RESEARCH</h4>
                 <p>
 
                 </p>
