--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,27 @@
         <div class="media-body">
             <div class="media-body-container">
                 <div class="project-text">
+                    <h4>CRUELTY FREE SOCIAL MEDIA BOT "TurBOTa"</h4>
+                    <p>
+                        After researching a tool to help people find information about cruelty free brands, me and my friend Polly realized there is no place you would go to search for it as a Ukrainian looking for details on animal testing in local brands. So as team of enthusiasts
+                        from eco-NGO "ESMU," we decided to make one! To speak to our audience, we've chosen to publish an automated bot on of the most popular Ukrainian social media websites — Telegram — so it's convenient to use with no need to download
+                        additional apps or go searching online. Just text our bot a brand you are looking for and it will immediately text you back with whether this brand is cruelty free or not, and if it is, we also try to provide if it's vegan or not.
+                        If the brand is not cruelty free, you may chose to see similar "good" brands, and the bot will ask you back what kind of specific product you are most interested about (for example, if your first message was Nivea, then it will
+                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider.
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="650px" height="500px">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text">
                     <h4>BOUNCY GAME WITH JAVA GRAPHICS</h4>
                     <p>
                         This is a simple Bouncy Game on Java. At the start of the game you are given a ball on a petal and several blocks up above that you have to break through. The ball will automatically start bouncing back and forth, and once it hits any of the blocks --
