--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,8 @@
                         from eco-NGO "ESMU," we decided to make one! To speak to our audience, we've chosen to publish an automated bot on of the most popular Ukrainian social media websites — Telegram — so it's convenient to use with no need to download
                         additional apps or go searching online. Just text our bot a brand you are looking for and it will immediately text you back with whether this brand is cruelty free or not, and if it is, we also try to provide if it's vegan or not.
                         If the brand is not cruelty free, you may chose to see similar "good" brands, and the bot will ask you back what kind of specific product you are most interested about (for example, if your first message was Nivea, then it will
-                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider.
+                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider. I am leading the team of eight teenagers who are excited to work for it for already
+                        1.5 years.
                     </p>
                 </div>
 
