--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,28 @@
         <div class="media-body">
             <div class="media-body-container">
                 <div class="project-text">
+                    <h4>CRUELTY FREE SOCIAL MEDIA BOT "TurBOTa"</h4>
+                    <p>
+                        After researching a tool to help people find information about cruelty free brands, me and my friend Polly realized there is no place you would go to search for it as a Ukrainian looking for details on animal testing in local brands. So as a team of enthusiasts
+                        from eco-NGO "ESMU," we decided to make one! To speak to our audience, we've chosen to publish an automated bot on of the most popular Ukrainian social media websites — Telegram — so it's convenient to use with no need to download
+                        additional apps or go searching online. Just text our bot a brand you are looking for and it will immediately text you back with whether this brand is cruelty free or not, and if it is, we also try to provide if it's vegan or not.
+                        If the brand is not cruelty free, you may chose to see similar "good" brands, and the bot will ask you back what kind of specific product you are most interested about (for example, if your first message was Nivea, then it will
+                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider. I am leading the team of eight teenagers who are excited to work for it for already
+                        1.5 years.
+                    </p>
+                </div>
+
+                <div class="project-picture">
+                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="650px" height="500px">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="visit-card">
+        <div class="media-body">
+            <div class="media-body-container">
+                <div class="project-text">
                     <h4>SOLVING THE KNAPSACK PROBLEM WITH VARIATIONAL QUANTUM EIGENSOLVER ALGORITHM</h4>
                     <p>
                         The Knapsack Problem is a problem in combinatorial optimization: Given a set of items, each with a weight and a value, determine the number of each item to include in a collection so that the total weight is less than or equal to a given limit and the
@@ -73,28 +95,6 @@
                     <p>
                         Grover’s Search Algorithm is a quantum algorithm that searches through unordered data. The algorithm, however, like all quantum, does not output the location with 100% precision but gives a very high probability of finding the element in a certain position.
                         It’s proven that Grover’s Search is √X faster than classical computer, where X is the number of elements in the database. The project is implemented through the IBM Quantum Experience using Qiskit Python library for quantum computing.
-                    </p>
-                </div>
-
-                <div class="project-picture">
-                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="650px" height="500px">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="visit-card">
-        <div class="media-body">
-            <div class="media-body-container">
-                <div class="project-text">
-                    <h4>CRUELTY FREE SOCIAL MEDIA BOT "TurBOTa"</h4>
-                    <p>
-                        After researching a tool to help people find information about cruelty free brands, me and my friend Polly realized there is no place you would go to search for it as a Ukrainian looking for details on animal testing in local brands. So as team of enthusiasts
-                        from eco-NGO "ESMU," we decided to make one! To speak to our audience, we've chosen to publish an automated bot on of the most popular Ukrainian social media websites — Telegram — so it's convenient to use with no need to download
-                        additional apps or go searching online. Just text our bot a brand you are looking for and it will immediately text you back with whether this brand is cruelty free or not, and if it is, we also try to provide if it's vegan or not.
-                        If the brand is not cruelty free, you may chose to see similar "good" brands, and the bot will ask you back what kind of specific product you are most interested about (for example, if your first message was Nivea, then it will
-                        ask you whether you are looking for a hair care product or maybe a deodorant) and send back a list with about 10-15 other options you might consider. I am leading the team of eight teenagers who are excited to work for it for already
-                        1.5 years.
                     </p>
                 </div>
 
