--- a/stem.html
+++ b/stem.html
@@ -119,8 +119,16 @@
                 <br>
                 <h4 id="september">SEPTEMBER RESEARCH</h4>
                 <p>
-
+                    I've identified some keywords for my research project: #cryptography #security
                 </p>
+                <p>
+                    Have read the guides Ms. Lohwater posted for the Massachussets Science and Engineering Fair.
+                </p>
+                <ul>TO-DOs:
+                    <li>Read Luc Coté's paper</li>
+                    <li>Work on Cryptography I</li>
+                    <li>Read more articles in the resourceses database</li>
+                </ul>
                 <br>
             </div>
         </div>
