--- a/stem.html
+++ b/stem.html
@@ -110,8 +110,13 @@
                         </ol>
                     </li>
 
-                    <li>Data Science and Machine Learning bootcamp</li>
-
+                    <li>Data Science and Machine Learning summer bootcamp
+                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                            <li style="margin-left:2em">Did Data Science, Machine Learning, and Data Sciences research courses as part of a summer school. Learned to frame research papers, read them and dissect them, how to give efficient presentations and create materials for them,
+                                how to reach out for help, and how to leverage data science and machine learning for research. I've also learned a completely new computer language on a fairly high level and can work with data sets through Python libraries,
+                                as well as use statistics to analyse the results and conduct a data science research.</li>
+                        </ol>
+                    </li>
                     <br>
                     <img src="summer.png" width="700px">
                 </ul>
@@ -122,7 +127,8 @@
                     I've identified some keywords for my research project: #cryptography #security
                 </p>
                 <p>
-                    Have read the guides Ms. Lohwater posted for the Massachussets Science and Engineering Fair.
+                    Have read the guides Ms. Lohwater posted for the Massachussets Science and Engineering Fair. Have printed out all of my summer articles and summaries and nicely organized them in a binder. Last week's meeting with Mr. Bauer was not much talking but we
+                    did generate a nice idea of creating a 3D visualization of 2D boards with a source of light and computer simulations. Now I am thinking of looking for articles on this topic. Working my way through the Cryptography I course.
                 </p>
                 <ul>TO-DOs:
                     <li>Read Luc Coté's paper</li>
