--- a/stem.html
+++ b/stem.html
@@ -134,6 +134,8 @@
                     <li>Read Luc Coté's paper</li>
                     <li>Work on Cryptography I</li>
                     <li>Read more articles in the resourceses database</li>
+                    <li>Update website on summer articles</li>
+                    <li>Articles on 3D simulations</li>
                 </ul>
                 <br>
             </div>
