--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Grover's Algorithm.pdf" type="application/pdf" width="650px" height="500px">
+                    <embed src="bot.jpeg" type="image/jpg" width="650px" height="500px">
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
 
                 <div class="project-picture">
                     <img src="Bouncy.png" id="bouncy" height="550px">
-                    <embed src="" type="application/pdf" width="650px" height="500px">
+                    <embed src="" type="image/jpg" width="650px" height="500px">
                 </div>
             </div>
         </div>
