--- a/projects.html
+++ b/projects.html
@@ -119,8 +119,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <img src="Bouncy.png" id="bouncy" height="550px">
-                    <embed src="" type="image/jpg" width="650px" height="500px">
+                    <embed src="Boncy.png" type="image/png" width="650px" height="500px">
                 </div>
             </div>
         </div>
