--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="project-picture">
-                    <embed src="Boncy.png" type="image/png" width="650px" height="500px">
+                    <embed src="Bouncy.png" type="image/png" width="650px" height="500px">
                 </div>
             </div>
         </div>
