--- a/stem.html
+++ b/stem.html
@@ -124,14 +124,18 @@
                 <br>
                 <h4 id="september">SEPTEMBER RESEARCH</h4>
                 <p>
-                    I've identified some keywords for my research project: #cryptography #security
+                    I've identified some keywords for my research project: #cryptography #security #internet_of_things
                 </p>
                 <p>
                     Have read the guides Ms. Lohwater posted for the Massachussets Science and Engineering Fair. Have printed out all of my summer articles and summaries and nicely organized them in a binder. Last week's meeting with Mr. Bauer was not much talking but we
-                    did generate a nice idea of creating a 3D visualization of 2D boards with a source of light and computer simulations. Now I am thinking of looking for articles on this topic. Working my way through the Cryptography I course.
+                    did generate a nice idea of creating a 3D visualization of 2D boards with a source of light and computer simulations. Now I am thinking of looking for articles on this topic.
                 </p>
+                <p>Read Luc Coté's paper on Privacy Vulnerabilities within IoT Device Traffic. A lot of useful information to also make me realize that I need to read more information about tech security in general. One possible way I might take on is to
+                    create a Machine Learning model of traffic masking to automize Luc's work. Mr. Bauer suggested I talk to Luc and hear what does he have to say, and if he worked on it after the Fellowship in any way. I can also try talking to Mr. Host
+                    and asking how am I going to collect so much traffic. One way is for me to collect it from the devices I would test but it's going to take too much time, so it would be easier to find open source traffic or ask if we can extract if
+                    from the school's network (which is not a good way to do it, I believe).</p>
+                <p>Now I would need to ask Jocelym if her brother would be willing to talk to me about the project; read much more about security; work on Cryptography I course. </p>
                 <ul>TO-DOs:
-                    <li>Read Luc Coté's paper</li>
                     <li>Work on Cryptography I</li>
                     <li>Read more articles in the resourceses database</li>
                     <li>Update website on summer articles</li>
