--- a/stem.html
+++ b/stem.html
@@ -69,6 +69,11 @@
                             <span>SEPTEMBER RESEARCH</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="#october">
+                            <span>OCTOBER RESEARCH</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -135,13 +140,17 @@
                     and asking how am I going to collect so much traffic. One way is for me to collect it from the devices I would test but it's going to take too much time, so it would be easier to find open source traffic or ask if we can extract if
                     from the school's network (which is not a good way to do it, I believe).</p>
                 <p>Now I would need to ask Jocelym if her brother would be willing to talk to me about the project; read much more about security; work on Cryptography I course. </p>
-                <ul>TO-DOs:
-                    <li>Work on Cryptography I</li>
-                    <li>Read more articles in the resourceses database</li>
-                    <li>Update website on summer articles</li>
-                    <li>Articles on 3D simulations</li>
-                </ul>
                 <br>
+
+                <h4 id="october">OCTOBER RESEARCH</h4>
+
+                <p>I am quite anxious about my topic selection as everything I read on the topic is not narrow or niche enough. I talked a little to Mr. Bauer and I now know I will concentrate on wireless IoT communication. Lauren offered I contact her father
+                    who works at Intel and might help me with narrowing down my topic. He replied to me with a very extensive overview of his take on current state of IoT security. He sent me a very interesting article on a vulnerability of AirTag that
+                    was discovered by an outside researcher. I think this topic would be really interesting to go down by but there is also a lot of ways to narrow it even further: I might look at Apple Watch, for example. But I also think it is fairly
+                    hard to track these vulnerabilites because I would have to test out MANY possibilities. Additionally, I can't be sure they have vulnerabilities I am capable of discovering. Conversely, I can look at Xiaomi wathches or any other less
+                    protected watches. I think I would want to focus on hardware but I think software is much easier to work with, and I know almost nothing about hardware as of now. Mr. Tran also mentioned there are some interesting ways I can go down
+                    by in software cryptography if I do some coding. </p>
+                <p></p>
             </div>
         </div>
     </div>
