--- a/stem.html
+++ b/stem.html
@@ -127,7 +127,7 @@
                 </ul>
 
                 <br>
-                <h4 id="september">SEPTEMBER RESEARCH</h4>
+                <h4 id="september">SEPTEMBER</h4>
                 <p>
                     I've identified some keywords for my research project: #cryptography #security #internet_of_things
                 </p>
@@ -142,7 +142,7 @@
                 <p>Now I would need to ask Jocelym if her brother would be willing to talk to me about the project; read much more about security; work on Cryptography I course. </p>
                 <br>
 
-                <h4 id="october">OCTOBER RESEARCH</h4>
+                <h4 id="october">OCTOBER</h4>
 
                 <p>I am quite anxious about my topic selection as everything I read on the topic is not narrow or niche enough. I talked a little to Mr. Bauer and I now know I will concentrate on wireless IoT communication. Lauren offered I contact her father
                     who works at Intel and might help me with narrowing down my topic. He replied to me with a very extensive overview of his take on current state of IoT security. He sent me a very interesting article on a vulnerability of AirTag that
