--- a/stem.html
+++ b/stem.html
@@ -66,12 +66,12 @@
                     </li>
                     <li>
                         <a href="#september">
-                            <span>SEPTEMBER RESEARCH</span>
+                            <span>SEPTEMBER</span>
                         </a>
                     </li>
                     <li>
                         <a href="#october">
-                            <span>OCTOBER RESEARCH</span>
+                            <span>OCTOBER</span>
                         </a>
                     </li>
                 </ul>
