--- a/stem.html
+++ b/stem.html
@@ -99,8 +99,8 @@
                         <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
                             <li style="margin-left:2em">I've read through about seven research papers that are tangible to chaotical cryptography and chaotic electronic circuits that can be used to generate truly random keys. However, all of the papers date back to 1990-2000ss,
                                 and I can't find what happened afterwards, why nobody works on it futher. One possible reason is that scientists then saw it does not have real-world application just yet.</li>
-                            <li>I also maintain a big Google Sheet of all the papers/articles I worked with to keep track of everything. Each research paper has its own ID number there, and I mark it on the printed versions, summaries, and start their name
-                                on the drive with that number. </li>
+                            <li style="margin-left:2em">I also maintain a big Google Sheet of all the papers/articles I worked with to keep track of everything. Each research paper has its own ID number there, and I mark it on the printed versions, summaries, and start their name
+                                on the drive with that number.</li>
                         </ol>
                     </li>
 
