--- a/stem.html
+++ b/stem.html
@@ -153,8 +153,8 @@
                     protected watches. I think I would want to focus on hardware but I think software is much easier to work with, and I know almost nothing about hardware as of now. Mr. Tran also mentioned there are some interesting ways I can go down
                     by in software cryptography if I do some coding. </p>
                 <p>I also contacted four other people from colleges who work on cybersecurity-related research to ask if my polyalphabetic cypher idea makes any sense. I received three replies and had two zoom calls with them. One of the people I contacted
-                    agreed to be my research mentor! He is a Ph.D. student at MIT interested in cryptography and cybersecurity. We talked about my current research interests and he(Kevin) sent me three research papers to read through; later in the week
-                    we will discuss them and see if there is anything that sparked interest.</p>
+                    agreed to be my <b>research mentor!</b> He is a Ph.D. student at MIT interested in cryptography and cybersecurity. We talked about my current research interests and he(Kevin) sent me three research papers to read through; later in
+                    the week we will discuss them and see if there is anything that sparked interest.</p>
                 <p>I've read through one of the papers sent by Kevin and I think this would be an interesting research topic. The paper talks about creating a fine-labeled dataset of IoT traffic events from distinct gadgets. They also see a viable path of
                     using it now to perform Machine Learning on this dataset to train the model to identify what device left the traffic and what event it was. In any case, I think investigation IoT traffic would be feasible and interesting; Luc's paper
                     also was on it. </p>
